# culture-inteligent-node

./: .env.example  .gitignore  README.md  firebase-applet-config.json  index.html  metadata.json  package-lock.json  package.json  server.ts  tsconfig.json  vite.config.ts
culture-economy/: .gitignore  Anchor.toml  README.md  package.json
culture-economy/programs/culture_economy/: Cargo.toml
culture-economy/programs/culture_economy/src/: lib.rs
culture-poa/: Anchor.toml  Arcium.toml  README.md  package-lock.json  package.json
deploy/: schema.sql
docs/: ANGEL_DILIGENCE.md  APP_STORE.md  ARCIUM_POA.md  ATTENTION_MINER_BOTS.md  ATTENTION_UX.md  BRAND_STRATEGY.md  COMMUNITY.md  FARCASTER_GROWTH.md  FIELD_DECK.md  FUNDING_MOMENTUM.md  GOOGLE_AI_GRANT.md  GROWTH_LOOP.md  HEARING_MODE.md  HOOK_LOOP_CAMPAIGN.md  HUMAN_ECONOMY.md  INTERACTIVE_DECKS.md  INVESTOR_NUMBERS.md  INVESTOR_PARTNER_BRIEF.md  OKX_AGENTIC_WALLET.md  PARTNER_ATTENTION_SESSION.md  PRESS_KIT.md  README.md  SECURITY_NOTES.md  SOLANA_ECONOMY.md  SOULBOUND_REPUTATION.md
grant-application/: 00-README.md  01-application.md  02-session-evidence.md  03-ship-plan.md  04-drive-upload-checklist.md  05-earn-paste-block.md  06-tranche2-demo-script.md  07-primary-kpi.md
mobile-twa/: README.md  twa-manifest.json
okx-genesis-submission/: 00-README.md  01-asp-identity.md  02-form-answers.md  03-x-post.md  04-demo-script-90s.md  05-track-strategy.md  06-register-session.md
pitch/: capture-pdf.mjs  export-pdf.mjs  index.html  partner-one-pager.html
public/: privacy.html  robots.txt  site.webmanifest  sw.js  (+2 more)
(+246 files in other folders)
